# AP_PROJECT_3

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  locustfile.py  main.py  pyproject.toml  test.db
api/: database.py  models.py  redis.py  schemas.py
api/routers/: links.py
notebooks/: FastAPI_project.ipynb
tests/: conftest.py  test_routers.py
